# ForzAnalyst

./: Cargo.toml
.github/workflows/: release.yaml
src/: app.rs  control_panel.rs  dialog.rs  event.rs  forza.rs  forza_packet.rs  gui.rs  lib.rs  main.rs
src/forza/: chunk.rs  forza_packet.rs  mod.rs  packet.rs  socket.rs
src/gui/: chunk_panel.rs  control_panel.rs  map_panel.rs  mod.rs  packet_panel.rs
