[package]
name = "forzanalyst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signal-hook = "0.3.10"
sdl2 = "0.34.5"
imgui = "0.7.0"
imgui-sdl2 = "0.14.0"
gl = "0.10.0"
imgui-opengl-renderer = "0.11"
