[package]
name = "forzanalyst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyfiledialogs = "3.0"
egui_sdl2_gl = { git = "https://github.com/ttreyer/egui_sdl2_gl.git" }
image = { version = "0.23.14", default-features = false, features = ["jpeg"] }
zstd = "0.9.0+zstd.1.5.0"
