[package]
name = "forzanalyst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "0.6"
eframe = { git = "https://github.com/emilk/egui.git" }
image = { version = "0.23", default-features = false, features = ["jpeg"] }
zstd = "0.9"
